--- a/portfolio.html
+++ b/portfolio.html
@@ -31,12 +31,12 @@
           <ul class="header-list list">
             <div class="header-list-container">
               <li class="header-list-item">
-                <a class="link header-nav " href="./index.html"
-                  >Studio</a
-                >
+                <a class="link header-nav" href="./index.html">Studio</a>
               </li>
               <li class="header-list-item">
-                <a class="link header-nav current" href="./portfolio.html">Portfolio</a>
+                <a class="link header-nav current" href="./portfolio.html"
+                  >Portfolio</a
+                >
               </li>
               <li class="header-list-item">
                 <a class="link header-nav" href="./index.html">Contacts</a>
@@ -76,9 +76,11 @@
             <li><button class="filtres-btn" type="button">Web Site</button></li>
             <li><button class="filtres-btn" type="button">App</button></li>
             <li><button class="filtres-btn" type="button">Design</button></li>
-            <li><button class="filtres-btn" type="button">Marketing</button></li>
+            <li>
+              <button class="filtres-btn" type="button">Marketing</button>
+            </li>
           </ul>
-        </div >
+        </div>
 
         <!-- Projekt Cards -->
         <div class="container">
@@ -90,14 +92,13 @@
                 width="360"
                 height="300"
                 alt="Banking App Interface Concept"
-              />           
-                <div class="cards-list-text">
-                  <h2 class="cards-list-title">Banking App Interface Concept</h2>
-                  <p class="cards-text">App</p>
-                </div >
-            
+              />
+              <div class="cards-list-text">
+                <h2 class="cards-list-title">Banking App Interface Concept</h2>
+                <p class="cards-text">App</p>
+              </div>
             </li>
-  
+
             <li class="list list cards-list-item">
               <img
                 class="cards-foto"
@@ -109,9 +110,9 @@
               <div class="cards-list-text">
                 <h2 class="cards-list-title">Cashless Payment</h2>
                 <p class="cards-text">Marketing</p>
-              </div >
+              </div>
             </li>
-  
+
             <li class="list list cards-list-item">
               <img
                 class="cards-foto"
@@ -123,9 +124,9 @@
               <div class="cards-list-text">
                 <h2 class="cards-list-title">Meditaion App</h2>
                 <p class="cards-text">App</p>
-              </div >
+              </div>
             </li>
-  
+
             <li class="list list cards-list-item">
               <img
                 class="cards-foto"
@@ -135,10 +136,11 @@
                 alt="Taxi Service"
               />
               <div class="cards-list-text">
-              <h2 class="cards-list-title">Taxi Service</h2>
-              <p class="cards-text">Marketing</p></div>
+                <h2 class="cards-list-title">Taxi Service</h2>
+                <p class="cards-text">Marketing</p>
+              </div>
             </li>
-  
+
             <li class="list list cards-list-item">
               <img
                 class="cards-foto"
@@ -148,10 +150,11 @@
                 alt="Screen Illustrations"
               />
               <div class="cards-list-text">
-              <h2 class="cards-list-title">Screen Illustrations</h2>
-              <p class="cards-text">Design</p></div>
+                <h2 class="cards-list-title">Screen Illustrations</h2>
+                <p class="cards-text">Design</p>
+              </div>
             </li>
-  
+
             <li class="list list cards-list-item">
               <img
                 class="cards-foto"
@@ -161,10 +164,11 @@
                 alt="Online Courses"
               />
               <div class="cards-list-text">
-              <h2 class="cards-list-title">Online Courses</h2>
-              <p class="cards-text">Marketing</p></div>
+                <h2 class="cards-list-title">Online Courses</h2>
+                <p class="cards-text">Marketing</p>
+              </div>
             </li>
-  
+
             <li class="list list cards-list-item">
               <img
                 class="cards-foto"
@@ -174,10 +178,11 @@
                 alt="Instagram Stories Concept"
               />
               <div class="cards-list-text">
-              <h2 class="cards-list-title">Instagram Stories Concept</h2>
-              <p class="cards-text">Design</p></div>
+                <h2 class="cards-list-title">Instagram Stories Concept</h2>
+                <p class="cards-text">Design</p>
+              </div>
             </li>
-  
+
             <li class="list list cards-list-item">
               <img
                 class="cards-foto"
@@ -187,10 +192,11 @@
                 alt="Organic Food"
               />
               <div class="cards-list-text">
-              <h2 class="cards-list-title">Organic Food</h2>
-              <p class="cards-text">Web Site</p></div>
+                <h2 class="cards-list-title">Organic Food</h2>
+                <p class="cards-text">Web Site</p>
+              </div>
             </li>
-  
+
             <li class="list list cards-list-item">
               <img
                 class="cards-foto"
@@ -200,11 +206,12 @@
                 alt="Fresh Coffee"
               />
               <div class="cards-list-text">
-              <h2 class="cards-list-title">Fresh Coffee</h2>
-              <p class="cards-text">Web Site</p></div>
+                <h2 class="cards-list-title">Fresh Coffee</h2>
+                <p class="cards-text">Web Site</p>
+              </div>
             </li>
           </ul>
-        </div >
+        </div>
       </section>
     </main>
 
