--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
     </header>
     <main>
       <!-- Filtres -->
-      <section>
+      <section class="portfolio">
         <div class="container">
           <h1 class="visually-hidden">Filters</h1>
           <ul class="filtres list">
